objects/Inspection_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Internal_Civil_Engineer_F__c</fullName>
        <formula>Site__r.Civil_Engineer__r.FirstName  &amp; &quot; &quot; &amp;  Site__r.Civil_Engineer__r.LastName</formula>
        <label>Internal Civil Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Civil_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Civil Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Checklists4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Electrical_Engineer_F__c</fullName>
        <formula>Site__r.Electrical_Engineer__r.FirstName   &amp; &quot; &quot; &amp;   Site__r.Electrical_Engineer__r.LastName</formula>
        <label>Internal Electrical Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Electrical_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Electrical Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Structural_Contact_F__c</fullName>
        <formula>Site__r.Structural_Engineer__r.FirstName    &amp; &quot; &quot; &amp;  Site__r.Structural_Engineer__r.LastName</formula>
        <label>Internal Structural Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Structural_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Structural Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Checklists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Inspection_Checklist__c</fullName>
        <inlineHelpText>Link to Inspection Checklist on Box.com</inlineHelpText>
        <label>Link to Inspection Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Manager_F__c</fullName>
        <formula>Project_Manager__r.FirstName  &amp; &quot; &quot;  &amp;  Project_Manager__r.LastName</formula>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Inspection Checklists</relationshipLabel>
        <relationshipName>Inspection_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Senior_Design_Engineer_F__c</fullName>
        <formula>Senior_Design_Engineer__r.FirstName  &amp; &quot; &quot; &amp; Senior_Design_Engineer__r.LastName</formula>
        <label>Senior Design Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Design_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Design Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Checklists3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Super_F__c</fullName>
        <formula>Site__r.Site_Superintendent__r.FirstName  &amp; &quot; &quot; &amp; Site__r.Site_Superintendent__r.LastName</formula>
        <label>Site Super</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Super__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Super</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Checklists5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Site__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Inspection Checklists</relationshipLabel>
        <relationshipName>Inspection_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of Preliminary Inspection Checklist</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inspection Checklist</label>
    <nameField>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Inspection Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Checklists</pluralLabel>
    <recordTypes>
        <fullName>Final</fullName>
        <active>true</active>
        <description>Final Inspection Checklist to be approved by PM team</description>
        <label>Final</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ongoing</fullName>
        <active>true</active>
        <description>Use to log ongoing Inspection Checklists during construction</description>
        <label>Ongoing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preliminary</fullName>
        <active>true</active>
        <description>1st Inspection checklist to be completed and approved by PM team</description>
        <label>Preliminary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>